# 285191U013-IPFCE-assignment-6

./: CMakeLists.txt  list.c  max.c
src/: max.c
tests/: tests.cpp
tests/src/: tests.cpp
